--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 TODO:-
-	Variables handling / Array handling in expressions, non autocreate.
+	Array handling in expressions, non autocreate.
 	Assignment statement creating variables
 	Array allocation.
 
