Variable access for int,str,arrays

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO:-
-	Array handling in expressions, non autocreate.
+	Assert.
+	Execution.
 	Assignment statement creating variables
 	Array allocation.
 
